Visitor counter added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="/src/style.css">
   <script type="module" src="/src/main.js"></script>
   <link rel="icon" type="image/png" href="/favicon.png">
+  <script data-goatcounter="https://mermaid-editor.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </head>
 <body class="p-6 font-sans">
   <h1 class="text-xl font-bold mb-4 text-center">Mermaid Editor</h1>
